# escapyde

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: github_release.yml  pylint.yml  ruff.yml  unit_tests.yml
escapyde/: __init__.py  ansi.py  colours.py  config.py  validators.py
escapyde/examples/: text.py
src/escapyde/: __init__.py  ansi.py  colours.py  config.py  validators.py
src/escapyde/examples/: __init__.py  text.py
tests/: conftest.py  test_ansi.py  test_colours.py
