[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "escapyde"
dynamic = ["version"]
description = "Yet another ANSI escape sequence library for Python - now modernised!"
authors = [{ name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com" }]
keywords = [
    "ansi",
    "console",
    "terminal",
    "escape",
    "sequence",
    "colour",
    "color",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Artistic Software",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Console Fonts",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://pypi.org/project/escapyde/"
Repository = "https://github.com/Diapolo10/escapyde"
Documentation = "https://github.com/Diapolo10/escapyde/tree/main/docs"
"Source code" = "https://github.com/Diapolo10/escapyde"
Tracker = "https://github.com/Diapolo10/escapyde/issues"
Changelog = "https://github.com/Diapolo10/escapyde/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "tox>=4.23.2",
    "tox-gh-actions>=3.2.0",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [".tox/*", "tests/*"]

[tool.coverage.report]
exclude_also = [
    "pragma: not covered",
    "@overload",
    "except importlib.metadata.PackageNotFoundError:",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.mypy]
exclude = ["tests/"]
exclude_gitignore = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
minversion = "9.0"
addopts = [
    "--doctest-modules",
    "--cov=./",
    "--cov-append",
    "--cov-fail-under=80",
    "--cov-report=html:tests/reports/coverage-html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:tests/reports/coverage.xml",
    "--ignore=docs/",
]
testpaths = ["tests"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Missing trailing comma (disabled due to formatter conflict)
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "ISC001",  # Single-line implicit string concatenation (disabled due to formatter conflict)
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
]
line-length = 120
show-fixes = true

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401", "F403", "F405", "PGH003"]
"tests/*" = ["ANN", "ARG", "INP001", "PLR2004", "S101"]
"**/ansi.py" = ["ANN401"]

[tool.ruff.pylint]
max-args = 15
max-branches = 20
max-returns = 15
max-statements = 80

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{11, 12, 13, 14}, pypy3
skip_missing_interpreters = true

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314
    pypy-3.11: pypy3

[testenv]
passenv =
    GITHUB_*
    FORCE_COLOR
allowlist_externals = uv

commands =
    uv run --active --frozen pytest
    uv run --active --frozen coverage report
"""

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.uv-dynamic-versioning]
bump = true
fallback-version = "0.0.0"
style = "pep440"
vcs = "git"
